set( TARGETNAME muconfig )

# enable c++14
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -gdwarf-3")

set(INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include/${TARGETNAME})
set(MUCONFIG_HEADER
    ${INCLUDE_DIR}/muconfig.h
    )
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} SOURCE)

include_directories(${CMAKE_SOURCE_DIR}/include)
include_directories(../contrib/cpptoml/include)

# add main library
add_library(${TARGETNAME} ${SOURCE} ${MUCONFIG_HEADER})
target_link_libraries(${TARGETNAME})

set_target_properties(${TARGETNAME} PROPERTIES PUBLIC_HEADER "${MUCONFIG_HEADER}")
set_property(TARGET ${TARGETNAME} PROPERTY POSITION_INDEPENDENT_CODE ON)

install(TARGETS ${TARGETNAME}
    PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_PREFIX}/include/${TARGETNAME} COMPONENT ${TARGETNAME}
    RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin COMPONENT ${TARGETNAME}
    LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
    GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE COMPONENT ${TARGETNAME}
    ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib COMPONENT ${TARGETNAME})

if(NOT TARGET uninstall)
    configure_file(
        "${CMAKE_CURRENT_SOURCE_DIR}/../cmake/uninstall.cmake.in"
        "${CMAKE_CURRENT_BINARY_DIR}/../cmake/uninstall.cmake"
        IMMEDIATE @ONLY)

    add_custom_target(uninstall
        COMMAND ${CMAKE_COMMAND} -P ${CMAKE_BINARY_DIR}/cmake/uninstall.cmake)
endif()
